# spectre

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
architecture-docs/: 01-overview.md  02-integration.md  03-frontend-flow.md  04-deployment.md  README.md
architecture-docs/diagrams/: 01-context.d2  02-components.d2  03-sequence.d2  05-deployment.d2  render.sh
backend/: Dockerfile  entrypoint.sh  otel-config.yaml  pyproject.toml  warmup_chroma.py
backend/app/: config.py  main.py  models.py
backend/app/draft/: generator.py
backend/app/evaluation/: benchmark.py  judge.py  metrics.py
backend/app/extraction/: llm_extractor.py  schemas.py
backend/app/feedback/: edit_capture.py  reinforcement.py
backend/app/ocr/: classifier.py  engine.py  pipeline.py  preprocess.py
backend/app/retrieval/: chroma_store.py
backend/app/telemetry/: tracing.py
frontend/: Dockerfile  app.py  requirements.txt
